docs/pages/versions/v57.0.0/sdk/ui/swift-ui/list.mdx
---
title: List
description: A SwiftUI List component for displaying scrollable lists of items.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`List`](../universal/list) — it renders the appropriate native component per platform.

Expo UI List matches the official SwiftUI [List API](https://developer.apple.com/documentation/swiftui/list) and supports styling via the [`listStyle`](modifiers/#liststylestyle) modifier, various row/section modifiers, as well as selection, reordering, and editing capabilities.

> **info** `List` does not lazily render rows yet: React creates every row up front, so large lists can be slow to mount. We are working on improving this. For large lists, we recommend [FlashList](https://shopify.github.io/flash-list/) or [Legend List](https://github.com/LegendApp/legend-list).

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/list/ios-light.webp"
  darkSrc="/static/images/expo-ui/list/ios-dark.webp"
  alt="A List with Favorites and Recents sections, each row showing a colored SF Symbol icon and a label"
/>

## Installation

<APIInstallSection />

## Usage

### Basic list

<ComponentExample
  title="BasicListExample.tsx"
  src="/static/images/expo-ui/examples/list-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-basic-ios-dark.webp"
  alt="A list with Fruits and Vegetables sections">

```tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';

export default function BasicListExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="Fruits">
          <Text>Apple</Text>
          <Text>Banana</Text>
          <Text>Orange</Text>
        </Section>
        <Section title="Vegetables">
          <Text>Carrot</Text>
          <Text>Broccoli</Text>
          <Text>Spinach</Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### List with labels and icons

<ComponentExample
  title="ListWithLabelsExample.tsx"
  src="/static/images/expo-ui/examples/list-with-labels-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-with-labels-ios-dark.webp"
  alt="A Settings list with Wi-Fi, Bluetooth, and Cellular rows with blue SF Symbol icons">

```tsx
import { Host, List, Label, Section } from '@expo/ui/swift-ui';

export default function ListWithLabelsExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="Settings">
          <Label title="Wi-Fi" systemImage="wifi" />
          <Label
            title="Bluetooth"
            systemImage="antenna.radiowaves.left.and.right"
          />
          <Label
            title="Cellular"
            systemImage="antenna.radiowaves.left.and.right.circle"
          />
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### List styles

Use the [`listStyle`](modifiers/#liststylestyle) modifier to change the list's appearance.

> **Note:** The `inset`, `insetGrouped`, and `sidebar` styles are not available on tvOS.

<ComponentExample
  title="ListStylesExample.tsx"
  src="/static/images/expo-ui/examples/list-styles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-styles-ios-dark.webp"
  alt="A list with a List Style menu picker set to automatic and three sample items">

```tsx
import { useState } from 'react';
import {
  Host,
  List,
  Text,
  Section,
  Picker,
} from '@expo/ui/swift-ui';
import {
  listStyle,
  pickerStyle,
  tag,
} from '@expo/ui/swift-ui/modifiers';

const styles = [
  'automatic',
  'plain',
  'inset',
  'insetGrouped',
  'grouped',
  'sidebar',
] as const;

export default function ListStylesExample() {
  const [styleIndex, setStyleIndex] = useState(0);

  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[listStyle(styles[styleIndex])]}>
        <Section title="Style Picker">
          <Picker
            label="List Style"
            selection={styleIndex}
            onSelectionChange={setStyleIndex}
            modifiers={[pickerStyle('menu')]}>
            {styles.map((style, index) => (
              <Text key={style} modifiers={[tag(index)]}>
                {style}
              </Text>
            ))}
          </Picker>
        </Section>
        <Section title="Sample Items">
          <Text>Item 1</Text>
          <Text>Item 2</Text>
          <Text>Item 3</Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Selection and edit mode

Enable selection, deletion, and reordering of list items using the [`List.ForEach`](#listforeach) compound component with `onDelete` and `onMove` props.

- Use the [`environment`](modifiers/#environmentkey-value) modifier to enable edit mode
- Use the [`tag`](modifiers/#tagtag) modifier to identify items
- Use the [`selection`](#selection) prop to control selected items
- Use [`moveDisabled`](modifiers/#movedisableddisabled) and [`deleteDisabled`](modifiers/#deletedisableddisabled) modifiers to disable these actions on individual items

<ComponentExample
  title="EditableListExample.tsx"
  src="/static/images/expo-ui/examples/list-editable-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-editable-ios-dark.webp"
  alt="A list with an Edit mode toggle and four task rows">

```tsx
import { useState } from 'react';
import {
  Host,
  List,
  Label,
  Section,
  Button,
  Toggle,
} from '@expo/ui/swift-ui';
import { environment, tag } from '@expo/ui/swift-ui/modifiers';

type Task = { id: string; title: string };

const INITIAL_TASKS: Task[] = [
  { id: '1', title: 'Task 1' },
  { id: '2', title: 'Task 2' },
  { id: '3', title: 'Task 3' },
  { id: '4', title: 'Task 4' },
];

export default function EditableListExample() {
  const [tasks, setTasks] = useState<Task[]>(INITIAL_TASKS);
  const [selectedIds, setSelectedIds] = useState<string[]>([]);
  const [editMode, setEditMode] = useState(false);

  const handleDelete = (indices: number[]) => {
    setTasks(prev => prev.filter((_, i) => !indices.includes(i)));
  };

  const handleMove = (
    sourceIndices: number[],
    destination: number
  ) => {
    setTasks(prev => {
      const newTasks = [...prev];
      const [removed] = newTasks.splice(sourceIndices[0], 1);
      const adjustedDest =
        sourceIndices[0] < destination
          ? destination - 1
          : destination;
      newTasks.splice(adjustedDest, 0, removed);
      return newTasks;
    });
  };

  return (
    <Host style={{ flex: 1 }}>
      <List
        selection={selectedIds}
        onSelectionChange={ids => setSelectedIds(ids.map(String))}
        modifiers={[
          environment('editMode', editMode ? 'active' : 'inactive'),
        ]}>
        <Section title="Settings">
          <Toggle
            label="Edit mode"
            isOn={editMode}
            onIsOnChange={setEditMode}
          />
        </Section>
        <Section title="Tasks">
          <List.ForEach onDelete={handleDelete} onMove={handleMove}>
            {tasks.map(task => (
              <Label
                key={task.id}
                title={task.title}
                modifiers={[tag(task.id)]}
              />
            ))}
          </List.ForEach>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Pull to refresh

Use the [`refreshable`](modifiers/#refreshablehandler) modifier to enable pull-to-refresh functionality.

<ComponentExample
  title="RefreshableListExample.tsx"
  src="/static/images/expo-ui/examples/list-refreshable-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-refreshable-ios-dark.webp"
  alt="A list with a Pull down to refresh row">

```tsx
import { useState } from 'react';
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import { refreshable } from '@expo/ui/swift-ui/modifiers';

export default function RefreshableListExample() {
  const [lastRefresh, setLastRefresh] = useState<Date | null>(null);

  const handleRefresh = async () => {
    // Simulate async data fetching
    await new Promise(resolve => setTimeout(resolve, 1500));
    setLastRefresh(new Date());
  };

  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[refreshable(handleRefresh)]}>
        <Section title="Data">
          <Text>Pull down to refresh</Text>
          {lastRefresh && (
            <Text>
              Last refresh: {lastRefresh.toLocaleTimeString()}
            </Text>
          )}
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Row styling

Use [`listRowBackground`](modifiers/#listrowbackgroundcolor), [`listRowSeparator`](modifiers/#listrowseparatorvisibility-edges), [`listRowSeparatorTint`](modifiers/#listrowseparatortintcolor-edges), and [`listRowInsets`](modifiers/#listrowinsetsparams) modifiers to customize individual rows. Use [`alignmentGuide`](modifiers/#alignmentguideguide-value) with the `listRowSeparatorLeading` guide to set where a row separator starts.

<ComponentExample
  title="RowStylingExample.tsx"
  src="/static/images/expo-ui/examples/list-row-styling-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-row-styling-ios-dark.webp"
  alt="A grouped list with a blue row, a red separator, an indented row, and a row flush to the edges">

```tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import {
  alignmentGuide,
  listRowBackground,
  listRowSeparator,
  listRowSeparatorTint,
  listRowInsets,
} from '@expo/ui/swift-ui/modifiers';

export default function RowStylingExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="Styled Rows">
          <Text modifiers={[listRowBackground('blue')]}>
            Blue background
          </Text>
          <Text modifiers={[listRowSeparator('hidden')]}>
            Hidden separator
          </Text>
          <Text modifiers={[listRowSeparatorTint('red')]}>
            Red separator
          </Text>
          <Text modifiers={[listRowInsets({ leading: 40 })]}>
            Extra leading inset
          </Text>
          <Text
            modifiers={[
              listRowInsets({ leading: 0, trailing: 0 }),
            ]}>
            No horizontal insets
          </Text>
          <Text
            modifiers={[
              alignmentGuide('listRowSeparatorLeading', 32),
            ]}>
            Separator starts 32 points in
          </Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Keyboard dismiss behavior

Use the [`scrollDismissesKeyboard`](modifiers/#scrolldismisseskeyboardmode) modifier to control how the keyboard is dismissed when scrolling.

<ComponentExample
  title="KeyboardDismissExample.tsx"
  src="/static/images/expo-ui/examples/list-keyboard-dismiss-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-keyboard-dismiss-ios-dark.webp"
  alt="A form list with Name, Email, and Phone text fields">

```tsx
import { Host, List, Section, TextField } from '@expo/ui/swift-ui';
import { scrollDismissesKeyboard } from '@expo/ui/swift-ui/modifiers';

export default function KeyboardDismissExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[scrollDismissesKeyboard('interactively')]}>
        <Section title="Form">
          <TextField placeholder="Name" />
          <TextField placeholder="Email" />
          <TextField placeholder="Phone" />
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

### Header prominence

Use the [`headerProminence`](modifiers/#headerprominenceprominence) modifier to adjust the visual prominence of section headers.

<ComponentExample
  title="HeaderProminenceExample.tsx"
  src="/static/images/expo-ui/examples/list-header-prominence-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/list-header-prominence-ios-dark.webp"
  alt="Two list sections with large prominent headers">

```tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import { headerProminence } from '@expo/ui/swift-ui/modifiers';

export default function HeaderProminenceExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[headerProminence('increased')]}>
        <Section title="Important Section">
          <Text>This section has increased header prominence</Text>
        </Section>
        <Section title="Another Section">
          <Text>Headers are more prominent</Text>
        </Section>
      </List>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { List } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/list" apiName="List" />
